--- a/tartarus/debian/control
+++ b/tartarus/debian/control
@@ -10,7 +10,7 @@ Package: tartarus
 Architecture: all
 Depends: ${misc:Depends}, tar (>= 1.16) | afio
 Recommends: perl, curl
-Suggests: gnupg, bzip2 | gzip, lvm-common, util-linux
+Suggests: gnupg, bzip2 | gzip, lvm2, util-linux
 Description: script based backup system
  Tartarus is a script based backup system that relies on default
  utilities available on most regular linux systems. It supports
