--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: tartarus
 Section: admin
 Priority: extra
 Maintainer: Stefan Tomanek <stefan.tomanek@wertarbyte.de>
-Build-Depends: debhelper (>= 7)
+Build-Depends: debhelper (>= 7.0.50~)
 Standards-Version: 3.8.0
 Homepage: http://wertarbyte.de/tartarus.shtml
 
